--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ layout: default
 ---
 
 Ciao AISF!
+L'Associazione Italiana Studenti di Fisica è un'associazione no-profit con finalità culturali nata nel 2014 con l'obiettivo di creare un network nazionale tra studenti di Fisica e promuovere la scienza e, in particolare, la Fisica. I suoi membri sono Comitati Locali e membri individuali, che si incontrano regolarmente in conferenze e iniziative di carattere locale, nazionale e internazionale.
