--- a/index.html
+++ b/index.html
@@ -6,3 +6,4 @@ layout: default
 ---
 
 Ciao AISF!
+L'International Association of Physics Students è una umbrella organization che dal 1987 promuove la collaborazione tra studenti e associazioni di Fisica in tutto il mondo. I suoi membri sono rappresentati da Comitati Nazionali e Locali. IAPS rappresenta oggi più di 60000 studenti, contando 26 National Committee e 21 Local Committee in più di 50 Stati. AISF è il Comitato Nazionale per l'Italia.
